Fix(core): Update z-index for Dialog and Toast

--- a/core/src/dialog/dialog.module.css
+++ b/core/src/dialog/dialog.module.css
@@ -7,7 +7,7 @@
 
 .container {
 	position: fixed;
-	z-index: 1000;
+	z-index: 10;
 
 	display: flex;
 	align-items: center;
