--- a/core/src/toast/container/container.module.css
+++ b/core/src/toast/container/container.module.css
@@ -3,6 +3,7 @@
 	top: 8px;
 	left: 0px;
 	right: 0px;
+	z-index: 20;
 }
 
 .item {
